n8n/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
    name: n8n
    labels:
      koeppster.net/aws_enabled: "true"
