n8n/manifests/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-n8n-v17
  namespace: n8n
  labels:
    app: postgres-n8n-v17
spec:
  serviceName: postgres-n8n-v17
  selector:
    matchLabels:
      app: postgres-n8n-v17
  replicas: 1
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 25%
    type: RollingUpdate
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  volumeClaimTemplates:
  - metadata:
      name: database-data-v17
    spec:
      storageClassName: kube-postgres
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
  template:
    metadata:
      labels:
        app: postgres-n8n-v17
    spec:
      hostname: postgres-n8n-v17
      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: postgres-n8n
        image: postgres:17.11-bookworm@sha256:051f7b7b3abdd564d5d1bd1e8c4b9c1b6e77087d1dd22020ede611c096a272e0
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 999
          runAsGroup: 999
          runAsNonRoot: true
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        ports:
        - containerPort: 5432
          name:  database-port
        readinessProbe:
          exec:
            command:
              - /bin/sh
              - -ec
              - psql --username="$POSTGRES_USER" --dbname="$POSTGRES_DB" --tuples-only --command='SELECT 1'
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 12
        startupProbe:
          exec:
            command:
              - /bin/sh
              - -ec
              - psql --username="$POSTGRES_USER" --dbname="$POSTGRES_DB" --tuples-only --command='SELECT 1'
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 120
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -ec
              - pg_isready --username="$POSTGRES_USER" --dbname=postgres
          periodSeconds: 15
          timeoutSeconds: 3
          failureThreshold: 4
        volumeMounts:
        - name: database-data-v17
          mountPath: /var/lib/postgresql/data
        - name: init-data
          mountPath: /docker-entrypoint-initdb.d/init-n8n-user.sh
          subPath: init-data.sh
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: init-data
        configMap:
          name: init-data
          defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-n8n-v17
  namespace: n8n
spec:
  selector:
    app: postgres-n8n-v17
  type: ClusterIP
  ports:
  - name: postgres
    protocol: TCP
    port: 5432
    targetPort: database-port
