n8n/manifests/n8n-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-route
  namespace: n8n
spec:
  parentRefs:
    - name: johnkoepp-com-gateway
      namespace: infrastructure
      sectionName: https
      port: 443
  hostnames: ["orchestration.johnkoepp.com"]
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: n8n
        namespace: n8n
        port: 5678
      timeouts:
        request: "900s"
        backendRequest: "600s"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-redirect
  namespace: n8n
  labels: 
    koeppster.net/aws_common_name: orchestration.johnkoepp.com
    koeppster.net/aws_status: waiting
spec:
  parentRefs:
    - name: johnkoepp-com-gateway
      namespace: infrastructure
      sectionName: http
      port: 80
  hostnames: ["orchestration.johnkoepp.com"]
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
